--- a/BE/package.json
+++ b/BE/package.json
@@ -14,7 +14,7 @@
     "@apollo/server": "^5.0.0",
     "@as-integrations/express5": "^1.1.2",
     "@prisma/client": "^6.12.0",
-    "bcryptjs": "^3.0.2",
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -23,12 +23,5 @@
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.12.0"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
   }
 }
